[gd_scene load_steps=2 format=3 uid="uid://cpcx3h8r5romb"]

[ext_resource type="Script" path="res://UI/End.gd" id="1_6fswe"]

[node name="End" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6fswe")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1169.0
offset_bottom = 668.0
color = Color(0.901961, 0.337255, 0.25098, 1)

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 139.0
offset_top = 91.0
offset_right = 1029.0
offset_bottom = 223.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 45
text = "You made it to the end!
Would you like to play the Bonus Round?"
horizontal_alignment = 1

[node name="Restart" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.376
anchor_top = 0.443
anchor_right = 0.376
anchor_bottom = 0.443
offset_left = -0.152008
offset_top = -0.0640259
offset_right = 249.848
offset_bottom = 49.936
theme_override_font_sizes/font_size = 30
text = "Play Again"

[node name="Leave" type="Button" parent="."]
layout_mode = 0
offset_left = 430.0
offset_top = 352.0
offset_right = 680.0
offset_bottom = 402.0
theme_override_font_sizes/font_size = 30
text = "Quit"

[node name="Bees" type="Button" parent="."]
layout_mode = 0
offset_left = 429.0
offset_top = 416.0
offset_right = 679.0
offset_bottom = 466.0
theme_override_font_sizes/font_size = 30
text = "Bee Room"

[connection signal="pressed" from="Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="Leave" to="." method="_on_leave_pressed"]
[connection signal="pressed" from="Bees" to="." method="_on_bees_pressed"]
